# paytm

./: .env.example  .gitignore  README.md  paytm.db  pyproject.toml  sqlite.db
src/: alembic.ini
src/app/: main.py
src/app/api/: dependencies.py
src/app/api/v1/: __init__.py  accounts.py  auth.py  auth_with_cookie.py  users.py
src/app/core/: auth.py  hash.py
src/app/db/access_layers/: db_accounts.py  db_users.py
src/app/middleware/: cors_middleware.py
src/app/models/: models.py
src/app/schemas/: accounts_schema.py  user_schema.py
src/migrations/: env.py
